--- a/03_exercises.Rmd
+++ b/03_exercises.Rmd
@@ -156,7 +156,7 @@ Here is the code to read in the data. We do this a little differently than usual
 
 ```{r cache=TRUE}
 data_site <- 
-  "https://www.macalester.edu/~dshuman1/data/112/2014-Q4-Trips-History-Data-Small.rds" 
+  "https://www.macalester.edu/~dshuman1/data/112/2014-Q4-Trips-History-Data.rds" 
 Trips <- readRDS(gzcon(url(data_site)))
 Stations<-read_csv("http://www.macalester.edu/~dshuman1/data/112/DC-Stations.csv")
 ```
@@ -282,8 +282,15 @@ Trips %>%
 ```{r}
 Trips %>% 
   left_join(Stations, c("sstation" = "name")) %>% 
-  ggplot(aes(y = lat, x = long, color = client)) +
-  geom_count(shape = 5)
+  group_by(sstation, lat, long, client) %>% 
+  summarize(Departures = n()) %>%
+  mutate(prop = Departures/sum(Departures)) %>% 
+  filter(client == "Casual") %>% 
+  ggplot(aes(y = lat, x = long, size = prop)) +
+  geom_point(color = "green") +
+  labs(y = "Longitude",  x = "Latitude", 
+       title = "Volume of Casual Departures by Station", 
+       size = "Proportion of\nCasual Riders")
 ```
   
 **DID YOU REMEMBER TO GO BACK AND CHANGE THIS SET OF EXERCISES TO THE LARGER DATASET? IF NOT, DO THAT NOW.**
@@ -294,14 +301,51 @@ In this section, we'll use the data from 2022-02-01 Tidy Tuesday. If you didn't 
 
   17. The final product of this exercise will be a graph that has breed on the y-axis and the sum of the numeric ratings in the `breed_traits` dataset on the x-axis, with a dot for each rating. First, create a new dataset called `breed_traits_total` that has two variables -- `Breed` and `total_rating`. The `total_rating` variable is the sum of the numeric ratings in the `breed_traits` dataset (we'll use this dataset again in the next problem). Then, create the graph just described. Omit Breeds with a `total_rating` of 0 and order the Breeds from highest to lowest ranked. You may want to adjust the `fig.height` and `fig.width` arguments inside the code chunk options (eg. `{r, fig.height=8, fig.width=4}`) so you can see things more clearly - check this after you knit the file to assure it looks like what you expected.
 
-```{r}
+```{r, fig.height=21, fig.width=8}
+breed_traits_total <- breed_traits %>% 
+  group_by(Breed) %>% 
+  mutate(total_rating = sum(`Affectionate With Family`, `Good With Young Children`, `Good With Other Dogs`, `Shedding Level`, `Coat Grooming Frequency`, `Drooling Level`, `Openness To Strangers`, `Playfulness Level`, `Watchdog/Protective Nature`, `Adaptability Level`, `Trainability Level`, `Energy Level`, `Barking Level`, `Mental Stimulation Needs`)) %>%  
+  summarise(Breed, total_rating) %>% 
+  filter(total_rating > 0)
 
+breed_traits_total %>% 
+  ggplot(aes(y = fct_reorder(Breed, total_rating), x = total_rating)) +
+  geom_point(color = "lightblue") +
+  labs(x = "Total Rating", y = "Breeds", title = "Total Rating for Each Breed in Order")
+       
 ```
 
   18. The final product of this exercise will be a graph with the top-20 dogs in total ratings (from previous problem) on the y-axis, year on the x-axis, and points colored by each breed's ranking for that year (from the `breed_rank_all` dataset). The points within each breed will be connected by a line, and the breeds should be arranged from the highest median rank to lowest median rank ("highest" is actually the smallest numer, eg. 1 = best). After you're finished, think of AT LEAST one thing you could you do to make this graph better. HINTS: 1. Start with the `breed_rank_all` dataset and pivot it so year is a variable. 2. Use the `separate()` function to get year alone, and there's an extra argument in that function that can make it numeric. 3. For both datasets used, you'll need to `str_squish()` Breed before joining. 
   
 ```{r}
 
+breed_rank_all_year <-breed_rank_all %>% 
+  pivot_longer(cols = "2013 Rank":"2020 Rank",
+               names_to = "Year") %>% 
+  select(-links, -Image)
+
+breed_rank_all_year$Year <- as.numeric(gsub(" Rank","", as.character(breed_rank_all_year$Year))) 
+
+breed_traits_total <- breed_traits_total %>%
+  mutate(breed_empty = str_squish(`Breed`))
+
+breed_rank_all_year <- breed_rank_all_year %>% 
+  mutate(breed_empty = str_squish(`Breed`)) %>% 
+  group_by(Breed) %>% 
+  mutate(median = median(value)) %>% 
+  ungroup()
+
+breed_rank_by_year <- left_join(breed_traits_total, breed_rank_all_year, by = "breed_empty")
+
+breed_rank_by_year %>% 
+  select(-Breed.x, -Breed.y) %>% 
+  arrange(value, Year) %>%
+  filter(value < 21) %>% 
+  ggplot(aes(y = fct_reorder(breed_empty, desc(median)), x = Year , color = value)) +
+  geom_line() +
+  labs(y = "Total Rating", 
+       title = "Top 20 Dogs Annual Rankings", 
+       color = "Ranking")  
 ```
   
   19. Create your own! Requirements: use a `join` or `pivot` function (or both, if you'd like), a `str_XXX()` function, and a `fct_XXX()` function to create a graph using any of the dog datasets. One suggestion is to try to improve the graph you created for the Tidy Tuesday assignment. If you want an extra challenge, find a way to use the dog images in the `breed_rank_all` file - check out the `ggimage` library and [this resource](https://wilkelab.org/ggtext/) for putting images as labels.
