--- a/03_exercises.Rmd
+++ b/03_exercises.Rmd
@@ -12,7 +12,7 @@ output:
 
 
 ```{r setup, include=FALSE}
-#knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
 ```
 
 ```{r libraries}
@@ -104,6 +104,8 @@ There are a lot of NA values you could make the table cleaner by replacing all o
 
   3. I would like to understand how much money I "saved" by gardening, for each vegetable type. Describe how I could use the `garden_harvest` and `garden_spending` datasets, along with data from somewhere like [this](https://products.wholefoodsmarket.com/search?sort=relevance&store=10542) to answer this question. You can answer this in words, referencing various join functions. You don't need R code but could provide some if it's helpful.
 
+You could create a new variable using date from the website to find out how much you would spend by buying the vegetables from a store. You could then join that data with garden_spending and plot it to show how much money was spent on the garden vs how much you would spend buying to same amount of vegetables. So you would also then want to look at the quantity of vegetables that were grown which would be measured in pounds. 
+
   4. Subset the data to tomatoes. Reorder the tomato varieties from smallest to largest first harvest date. Create a barplot of total harvest in pounds for each variety, in the new order.CHALLENGE: add the date near the end of the bar. (This is probably not a super useful graph because it's difficult to read. This is more an exercise in using some of the functions you just learned.)
 
 ```{r}
@@ -175,6 +177,7 @@ Trips %>%
   labs(y = "Density", x ="Date and Time", title="Bike rental density over time")+
   geom_density()
 ```
+  This graph represents the amount of bike rentals over time and as we can see the density of bike rentals were much higher in the fall while gradually declinging as we went into the colder months.
   
   8. A density plot of the events versus time of day.  You can use `mutate()` with `lubridate`'s  `hour()` and `minute()` functions to extract the hour of the day and minute within the hour from `sdate`. Hint: A minute is 1/60 of an hour, so create a variable where 3:30 is 3.5 and 3:45 is 3.75.
   
@@ -186,6 +189,7 @@ Trips %>%
   labs(y = "Density", x = "Time(Hours&Minutes)", title = "Events vs time of day") +
   geom_density()
 ```
+  This graph shows the density of bike rental in regards to the time of day so the majority of bike rentals occured in the morning around 8am as well as around the afternoon of 4pm. 
   
   9. A bar graph of the events versus day of the week. Put day on the y-axis.
   
@@ -196,6 +200,7 @@ Trips %>%
   labs(y = "Day of the week", x = "Number of rentals", title = "Number of total rentals for each day of the week")+
   geom_bar()
 ```
+  This is a bar graph representing the total number of bike rentals for each day of the week, This graph is fairly uniform with Sat and Sun being the days with the least amount of rentals with Fri and Thu having the most. 
   
   10. Facet your graph from exercise 8. by day of the week. Is there a pattern?
   
@@ -211,6 +216,7 @@ Trips %>%
   geom_density()+
   facet_wrap(.~day)
 ```
+  This graph represents the bike rentals during the hours of a day for each day of the week. There is a similar pattern in which weekdays all follow with a bimodal distribution with peaks of rental during the morning and afternoon. However, for the weekend they have a much more regular bell curve pattern with the peak in the evening.  
   
 The variable `client` describes whether the renter is a regular user (level `Registered`) or has not joined the bike-rental organization (`Causal`). The next set of exercises investigate whether these two different categories of users show different rental behavior and how `client` interacts with the patterns you found in the previous exercises. 
 
@@ -226,6 +232,7 @@ Trips %>%
   geom_density(alpha = .5, color = NA )+
   facet_wrap(.~day)
 ```
+This graph represent the bike rentals throughout the day for each day of the week but plots but casual and registered users. Registered users tend to have a pattern of a bimodal distribution on the weekdays while casual users have more of a bell curve pattern on those days. Both groups have a bell curve distribution on the weekend with there being more casual user rentals than registered users on weekends.
 
   12. Change the previous graph by adding the argument `position = position_stack()` to `geom_density()`. In your opinion, is this better or worse in terms of telling a story? What are the advantages/disadvantages of each?
   
@@ -239,6 +246,7 @@ Trips %>%
   geom_density(alpha = .5, color = NA, position = position_stack() )+
   facet_wrap(.~day)
 ```
+  This seems a bit easier to tell a story as you're able to compare the casual and registered users based on the density of rentals. However, it could be misleading since they are stacked you could be confused that casual has just that much more renters than registered users. The previous graph is nice as you're able to directly compare the two clients by viewing the graph and seeing the overlap between them. 
   
   13. In this graph, go back to using the regular density plot (without `position = position_stack()`). Add a new variable to the dataset called `weekend` which will be "weekend" if the day is Saturday or Sunday and  "weekday" otherwise (HINT: use the `ifelse()` function and the `wday()` function from `lubridate`). Then, update the graph from the previous problem by faceting on the new `weekend` variable. 
   
@@ -252,7 +260,8 @@ Trips %>%
   geom_density(alpha = .5, color = NA )+
   facet_wrap(.~weekend)
 ```
-  
+ This graph represent the bike rentals for the weekdays and weekend for the clients. Registered users tend to have a pattern of a bimodal distribution on the weekday while casual users have more of a bell curve pattern on those days. Both groups have a bell curve distribution on the weekend with there being more casual user rentals than registered users on weekends.
+ 
   14. Change the graph from the previous problem to facet on `client` and fill with `weekday`. What information does this graph tell you that the previous didn't? Is one graph better than the other?
   
 ```{r}
@@ -265,6 +274,7 @@ Trips %>%
   geom_density(alpha = .5, color = NA )+
   facet_wrap(.~client)
 ```
+  This graph is similar to the previous one except we are grouping by the client and labeling through the weekend/weekday. This graph shows us the comparison of the casual and registered density rentals for the weekday and weekend. They are graphed together so you're able to distinguish information about the client on the weekend/weekday rather than comparing the clients. 
   
 ### Spatial patterns
 
@@ -292,6 +302,7 @@ Trips %>%
        title = "Volume of Casual Departures by Station", 
        size = "Proportion of\nCasual Riders")
 ```
+  The points of departures by casual riders appear to be heavily grouped together which could represent highly dense areas. The further out you get from a cluster of points the proportion of casual riders decreases. 
   
 **DID YOU REMEMBER TO GO BACK AND CHANGE THIS SET OF EXERCISES TO THE LARGER DATASET? IF NOT, DO THAT NOW.**
 
@@ -347,16 +358,29 @@ breed_rank_by_year %>%
        title = "Top 20 Dogs Annual Rankings", 
        color = "Ranking")  
 ```
-  
+One thing I could do to make this graph better is the presentation of the visual. The gradient is a bit hard to distinguish for the rankings and I could add points to help better represent each year. 
+
   19. Create your own! Requirements: use a `join` or `pivot` function (or both, if you'd like), a `str_XXX()` function, and a `fct_XXX()` function to create a graph using any of the dog datasets. One suggestion is to try to improve the graph you created for the Tidy Tuesday assignment. If you want an extra challenge, find a way to use the dog images in the `breed_rank_all` file - check out the `ggimage` library and [this resource](https://wilkelab.org/ggtext/) for putting images as labels.
   
 ```{r}
-
+  
+breed_traits %>% 
+  left_join(breed_rank_all, by = "Breed") %>% 
+  mutate(good_dog_scale = `Affectionate With Family` + `Good With Young Children` + `Good With Other Dogs` + `Playfulness Level` + `Trainability Level` ) %>% 
+  mutate(breed_empty = str_squish(`Breed`)) %>% 
+  filter(good_dog_scale >= 24) %>% 
+  ggplot(aes( x = good_dog_scale, y = fct_reorder(breed_empty ,desc(good_dog_scale)), fill = breed_empty)) +
+  labs(y = "Breed", caption ="Graph created by Kenny Nhan, data from American Kennel Club" ,title = "What are the best family dogs?", x= "Good Dog Scale") +
+  geom_col() +
+  theme_clean()+
+  theme(legend.position = "none") 
 ```
   
 ## GitHub link
 
   20. Below, provide a link to your GitHub page with this set of Weekly Exercises. Specifically, if the name of the file is 03_exercises.Rmd, provide a link to the 03_exercises.md file, which is the one that will be most readable on GitHub.
+
+[link](https://github.com/KennyNhan/DS-Exercise-3/blob/cc84ed19c36fdeeea9a41bbfa0ec7ad5e9dd012f/03_exercises.Rmd)
 
 ## Challenge problem! 
 
@@ -364,6 +388,6 @@ This problem uses the data from the Tidy Tuesday competition this week, `kids`. 
 
   21. In this exercise, you are going to try to replicate the graph below, created by Georgios Karamanis. I'm sure you can find the exact code on GitHub somewhere, but **DON'T DO THAT!** You will only be graded for putting an effort into this problem. So, give it a try and see how far you can get without doing too much googling. HINT: use `facet_geo()`. The graphic won't load below since it came from a location on my computer. So, you'll have to reference the original html on the moodle page to see it.
   
-![](kids_data_karamanis.jpeg)
+
 
 **DID YOU REMEMBER TO UNCOMMENT THE OPTIONS AT THE TOP?**
